--- a/Styles/style.css
+++ b/Styles/style.css
@@ -30,18 +30,23 @@ body{
 }
 
 /*----------nav bar ---------------*/
-
+#navbar{
+  background-color:white;
+  position: sticky;
+}
 .navbar .navbar-brand{
   margin-left: 150px;
 }
 ul li{
-  font-weight: 500;
+  font-weight: 700;
   font-size: 18px;
   border: 2px solid transparent;
 }
 ul li:hover{
-  border-bottom: 2px solid blueviolet;
-  transition: all ease-in-out;
+  /*border-bottom: 2px solid blueviolet;
+  transition: all ease-in-out; */
+  background-color: blueviolet;
+  border-radius: 20px;
 }
 
 ul{
@@ -51,9 +56,10 @@ ul i{
   margin-top: 10px;
   cursor: pointer;
   font-size: 25px;
+  color:black;
 }
 .dark-mode{
-  background-color: black;
+  background-color: #2a2e35;
   color: white;
 }
 
@@ -65,14 +71,260 @@ ul i{
   font-size: 25px;
   cursor: pointer;
 }
-button{
-  padding:17px;
+.button{
+  margin-top: 20px;
+  display: inline-block;
+  background-color: blueviolet;
+  text-decoration: none;
+  color: #fff;
+  padding: 1rem;
+  border-radius: .5rem;
+  font-size: 17px;
+  font-weight: bold;
+  font-family: 'poppins',sans-serif;
+  box-shadow: var(--box-shadow-1);
+  transition-duration: 0.3s;
 }
-button i{
+.button:hover, .button:focus, .button:active{
+  box-shadow: 0 0 20px rgba(0,0,0,0.5);
+  transform: scale(1.1);
+}
+/* Define an animation */
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.button {
+  animation: bounce 2s infinite;
+}
+.button i{
+  font-size: 1.25rem;
   margin-left: 5px;
-  margin-top: 9px;
-  font-size: 15px;
+  transition: .3s;
 }
+
+/* ------------ About ----------- */
+.circular-image{
+  object-fit: cover;
+  border-radius:10%;
+  width: 300px;
+  margin-top: 20px;
+  margin-bottom: 90px;
+  margin-left: 170px;
+  
+}
+
+/*----------- Skills -------*/
+/*.progress{
+  margin: 10px;
+}
+.skill-icon{
+  color: blueviolet;
+  font-size: 1.5rem;
+  margin-right: 5px;
+}
+.head p{
+  margin-top: 50px;
+}
+.skill-item h3{
+  margin-left: 10px;
+  font-weight: 500;
+}
+  */
+
+.head i{
+  color: blueviolet;
+  font-size: 25px;
+  margin: 5px;
+}
+.skill-main .skill-bar .info{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+.skill-bar .bar{
+  width: 100%;
+  height: 10px;
+  background-color: var(--color--primary);
+  border-radius: 5px;
+  position: relative;
+}
+.info p{
+  font-size:19px;
+  margin-top: 15px;
+  font-weight: 700;
+}
+.skill-bar .bar span{
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  background-color: blueviolet;
+  border-radius: 25px;
+}
+.skill-bar .bar .html{
+  width: 90%;
+  animation: html 3s;
+}
+@keyframes html{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 90%;
+  }
+}
+.skill-bar .bar .css{
+  width: 85%;
+  animation: css 3s;
+}
+@keyframes css{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 85%;
+  }
+}
+.skill-bar .bar .javascript{
+  width: 75%;
+  animation: javascript 3s;
+}
+@keyframes javascript{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 75%;
+  }
+}
+.skill-bar .bar .react{
+  width: 80%;
+  animation: react 3s;
+}
+@keyframes react{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 80%;
+  }
+}
+
+/* ---- backend ----*/
+.skill-bar .bar .php{
+  width: 85%;
+  animation: php 3s;
+}
+@keyframes php{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 85%;
+  }
+}
+.skill-bar .bar .nodejs{
+  width: 70%;
+  animation: nodejs 3s;
+}
+@keyframes nodejs{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 70%;
+  }
+}
+.skill-bar .bar .firebase{
+  width: 76%;
+  animation: firebase 3s;
+}
+@keyframes firebase{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 76%;
+  }
+}
+.skill-bar .bar .python{
+  width: 55%;
+  animation: python 3s;
+}
+@keyframes python{
+  0%{
+    width: 0;
+  }
+  100%{
+    width: 55%;
+  }
+}
+
+/*------- Portifolio ------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
